[project]
name = "litegrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miguel Barbosa Pereira", email = "miguel.b.per@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
litegrad = "litegrad:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
